// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Report > renders report layout without data 1`] = `
<div>
  <div
    class="blong-report "
  >
    <div
      class="blong-report-table"
    >
      <div
        class="p-toolbar p-component blong-report-toolbar"
        end="[object Object]"
        role="toolbar"
      >
        <div
          class="p-toolbar-group-left"
        />
        <div
          class="p-toolbar-group-right"
        />
      </div>
      <div
        class="p-datatable p-component p-datatable-scrollable p-datatable-flex-scrollable p-datatable-sm blong-report-dt"
        data-scrollselectors=".p-datatable-wrapper"
        pr_id_1=""
      >
        <div
          class="p-paginator p-component p-paginator-top"
        >
          <button
            aria-label="First Page"
            class="p-paginator-first p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-left"
            />
          </button>
          <button
            aria-label="Previous Page"
            class="p-paginator-prev p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-left"
            />
          </button>
          <span
            class="p-paginator-pages"
          />
          <button
            aria-label="Next Page"
            class="p-paginator-next p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-right"
            />
          </button>
          <button
            aria-label="Last Page"
            class="p-paginator-last p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-right"
            />
          </button>
          <div
            class="p-dropdown p-component p-inputwrapper p-disabled p-inputwrapper-filled"
          >
            <div
              class="p-hidden-accessible"
            >
              <input
                aria-haspopup="listbox"
                aria-label="Choose"
                disabled=""
                readonly=""
                type="text"
              />
            </div>
            <div
              class="p-hidden-accessible p-dropdown-hidden-select"
            >
              <select
                aria-hidden="true"
                tabindex="-1"
              >
                <option
                  selected=""
                  value="50"
                >
                  50
                </option>
              </select>
            </div>
            <span
              class="p-dropdown-label p-inputtext"
            >
              50
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Choose"
              class="p-dropdown-trigger"
              role="button"
            >
              <span
                class="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
              />
            </div>
          </div>
        </div>
        <div
          class="p-datatable-wrapper"
          style="max-height: flex;"
        >
          <table
            class="p-datatable-table"
            role="table"
          >
            <thead
              class="p-datatable-thead"
            >
              <tr
                role="row"
              />
            </thead>
            <tbody
              class="p-datatable-tbody"
            >
              <tr
                class="p-datatable-emptymessage"
                role="row"
              >
                <td
                  colspan="0"
                  role="cell"
                >
                  No data.
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="p-paginator p-component p-paginator-bottom"
        >
          <button
            aria-label="First Page"
            class="p-paginator-first p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-left"
            />
          </button>
          <button
            aria-label="Previous Page"
            class="p-paginator-prev p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-left"
            />
          </button>
          <span
            class="p-paginator-pages"
          />
          <button
            aria-label="Next Page"
            class="p-paginator-next p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-right"
            />
          </button>
          <button
            aria-label="Last Page"
            class="p-paginator-last p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-right"
            />
          </button>
          <div
            class="p-dropdown p-component p-inputwrapper p-disabled p-inputwrapper-filled"
          >
            <div
              class="p-hidden-accessible"
            >
              <input
                aria-haspopup="listbox"
                aria-label="Choose"
                disabled=""
                readonly=""
                type="text"
              />
            </div>
            <div
              class="p-hidden-accessible p-dropdown-hidden-select"
            >
              <select
                aria-hidden="true"
                tabindex="-1"
              >
                <option
                  selected=""
                  value="50"
                >
                  50
                </option>
              </select>
            </div>
            <span
              class="p-dropdown-label p-inputtext"
            >
              50
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Choose"
              class="p-dropdown-trigger"
              role="button"
            >
              <span
                class="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Report > renders with metrics panel 1`] = `
<div>
  <div
    class="blong-report "
  >
    <div
      class="blong-report-metrics"
    >
      <div
        class="blong-report-metric blong-report-metric--success"
      >
        <i
          class="pi pi-dollar blong-report-metric__icon"
        />
        <div
          class="blong-report-metric__value"
        >
          0
        </div>
        <div
          class="blong-report-metric__label"
        >
          Total Amount
        </div>
      </div>
      <div
        class="blong-report-metric blong-report-metric--info"
      >
        <i
          class="pi pi-list blong-report-metric__icon"
        />
        <div
          class="blong-report-metric__value"
        >
          0
        </div>
        <div
          class="blong-report-metric__label"
        >
          Categories
        </div>
      </div>
    </div>
    <div
      class="blong-report-table"
    >
      <div
        class="p-toolbar p-component blong-report-toolbar"
        end="[object Object]"
        role="toolbar"
      >
        <div
          class="p-toolbar-group-left"
        />
        <div
          class="p-toolbar-group-right"
        />
      </div>
      <div
        class="p-datatable p-component p-datatable-scrollable p-datatable-flex-scrollable p-datatable-sm blong-report-dt"
        data-scrollselectors=".p-datatable-wrapper"
        pr_id_3=""
      >
        <div
          class="p-paginator p-component p-paginator-top"
        >
          <button
            aria-label="First Page"
            class="p-paginator-first p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-left"
            />
          </button>
          <button
            aria-label="Previous Page"
            class="p-paginator-prev p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-left"
            />
          </button>
          <span
            class="p-paginator-pages"
          />
          <button
            aria-label="Next Page"
            class="p-paginator-next p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-right"
            />
          </button>
          <button
            aria-label="Last Page"
            class="p-paginator-last p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-right"
            />
          </button>
          <div
            class="p-dropdown p-component p-inputwrapper p-disabled p-inputwrapper-filled"
          >
            <div
              class="p-hidden-accessible"
            >
              <input
                aria-haspopup="listbox"
                aria-label="Choose"
                disabled=""
                readonly=""
                type="text"
              />
            </div>
            <div
              class="p-hidden-accessible p-dropdown-hidden-select"
            >
              <select
                aria-hidden="true"
                tabindex="-1"
              >
                <option
                  selected=""
                  value="50"
                >
                  50
                </option>
              </select>
            </div>
            <span
              class="p-dropdown-label p-inputtext"
            >
              50
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Choose"
              class="p-dropdown-trigger"
              role="button"
            >
              <span
                class="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
              />
            </div>
          </div>
        </div>
        <div
          class="p-datatable-wrapper"
          style="max-height: flex;"
        >
          <table
            class="p-datatable-table"
            role="table"
          >
            <thead
              class="p-datatable-thead"
            >
              <tr
                role="row"
              >
                <th
                  aria-sort="none"
                  class="p-sortable-column"
                  role="columnheader"
                >
                  <div
                    class="p-column-header-content"
                  >
                    <span
                      class="p-column-title"
                    >
                      Category
                    </span>
                    <span
                      class="p-sortable-column-icon pi pi-fw pi-sort-alt"
                    />
                  </div>
                </th>
                <th
                  aria-sort="none"
                  class="p-sortable-column"
                  role="columnheader"
                >
                  <div
                    class="p-column-header-content"
                  >
                    <span
                      class="p-column-title"
                    >
                      Amount
                    </span>
                    <span
                      class="p-sortable-column-icon pi pi-fw pi-sort-alt"
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="p-datatable-tbody"
            >
              <tr
                class="p-datatable-emptymessage"
                role="row"
              >
                <td
                  colspan="2"
                  role="cell"
                >
                  No data.
                </td>
              </tr>
            </tbody>
            <tfoot
              class="p-datatable-tfoot"
            >
              <tr
                role="row"
              >
                <td
                  class=""
                  role="cell"
                />
                <td
                  class=""
                  role="cell"
                >
                  0
                </td>
              </tr>
            </tfoot>
          </table>
        </div>
        <div
          class="p-paginator p-component p-paginator-bottom"
        >
          <button
            aria-label="First Page"
            class="p-paginator-first p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-left"
            />
          </button>
          <button
            aria-label="Previous Page"
            class="p-paginator-prev p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-left"
            />
          </button>
          <span
            class="p-paginator-pages"
          />
          <button
            aria-label="Next Page"
            class="p-paginator-next p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-right"
            />
          </button>
          <button
            aria-label="Last Page"
            class="p-paginator-last p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-right"
            />
          </button>
          <div
            class="p-dropdown p-component p-inputwrapper p-disabled p-inputwrapper-filled"
          >
            <div
              class="p-hidden-accessible"
            >
              <input
                aria-haspopup="listbox"
                aria-label="Choose"
                disabled=""
                readonly=""
                type="text"
              />
            </div>
            <div
              class="p-hidden-accessible p-dropdown-hidden-select"
            >
              <select
                aria-hidden="true"
                tabindex="-1"
              >
                <option
                  selected=""
                  value="50"
                >
                  50
                </option>
              </select>
            </div>
            <span
              class="p-dropdown-label p-inputtext"
            >
              50
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Choose"
              class="p-dropdown-trigger"
              role="button"
            >
              <span
                class="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Report > renders with title and export buttons 1`] = `
<div>
  <div
    class="blong-report "
  >
    <div
      class="blong-report-table"
    >
      <div
        class="p-toolbar p-component blong-report-toolbar"
        end="[object Object]"
        role="toolbar"
      >
        <div
          class="p-toolbar-group-left"
        />
        <div
          class="p-toolbar-group-right"
        />
      </div>
      <div
        class="p-datatable p-component p-datatable-scrollable p-datatable-flex-scrollable p-datatable-sm blong-report-dt"
        data-scrollselectors=".p-datatable-wrapper"
        pr_id_2=""
      >
        <div
          class="p-paginator p-component p-paginator-top"
        >
          <button
            aria-label="First Page"
            class="p-paginator-first p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-left"
            />
          </button>
          <button
            aria-label="Previous Page"
            class="p-paginator-prev p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-left"
            />
          </button>
          <span
            class="p-paginator-pages"
          />
          <button
            aria-label="Next Page"
            class="p-paginator-next p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-right"
            />
          </button>
          <button
            aria-label="Last Page"
            class="p-paginator-last p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-right"
            />
          </button>
          <div
            class="p-dropdown p-component p-inputwrapper p-disabled p-inputwrapper-filled"
          >
            <div
              class="p-hidden-accessible"
            >
              <input
                aria-haspopup="listbox"
                aria-label="Choose"
                disabled=""
                readonly=""
                type="text"
              />
            </div>
            <div
              class="p-hidden-accessible p-dropdown-hidden-select"
            >
              <select
                aria-hidden="true"
                tabindex="-1"
              >
                <option
                  selected=""
                  value="50"
                >
                  50
                </option>
              </select>
            </div>
            <span
              class="p-dropdown-label p-inputtext"
            >
              50
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Choose"
              class="p-dropdown-trigger"
              role="button"
            >
              <span
                class="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
              />
            </div>
          </div>
        </div>
        <div
          class="p-datatable-wrapper"
          style="max-height: flex;"
        >
          <table
            class="p-datatable-table"
            role="table"
          >
            <thead
              class="p-datatable-thead"
            >
              <tr
                role="row"
              />
            </thead>
            <tbody
              class="p-datatable-tbody"
            >
              <tr
                class="p-datatable-emptymessage"
                role="row"
              >
                <td
                  colspan="0"
                  role="cell"
                >
                  No data.
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="p-paginator p-component p-paginator-bottom"
        >
          <button
            aria-label="First Page"
            class="p-paginator-first p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-left"
            />
          </button>
          <button
            aria-label="Previous Page"
            class="p-paginator-prev p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-left"
            />
          </button>
          <span
            class="p-paginator-pages"
          />
          <button
            aria-label="Next Page"
            class="p-paginator-next p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-right"
            />
          </button>
          <button
            aria-label="Last Page"
            class="p-paginator-last p-paginator-element p-link p-disabled"
            disabled=""
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-right"
            />
          </button>
          <div
            class="p-dropdown p-component p-inputwrapper p-disabled p-inputwrapper-filled"
          >
            <div
              class="p-hidden-accessible"
            >
              <input
                aria-haspopup="listbox"
                aria-label="Choose"
                disabled=""
                readonly=""
                type="text"
              />
            </div>
            <div
              class="p-hidden-accessible p-dropdown-hidden-select"
            >
              <select
                aria-hidden="true"
                tabindex="-1"
              >
                <option
                  selected=""
                  value="50"
                >
                  50
                </option>
              </select>
            </div>
            <span
              class="p-dropdown-label p-inputtext"
            >
              50
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Choose"
              class="p-dropdown-trigger"
              role="button"
            >
              <span
                class="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
